--- a/_Binary/imgui.ini
+++ b/_Binary/imgui.ini
@@ -773,3 +773,18 @@ Pos=1,1
 Size=323,284
 Collapsed=0
 
+[C11_TranslationAndScale_d - About]
+Pos=1,1
+Size=323,165
+Collapsed=0
+
+[E05_Translations_d - About]
+Pos=1,1
+Size=323,165
+Collapsed=0
+
+[E05 - Translations_d - About]
+Pos=1,1
+Size=323,165
+Collapsed=0
+
