--- a/_Binary/imgui.ini
+++ b/_Binary/imgui.ini
@@ -793,3 +793,13 @@ Pos=1,1
 Size=323,165
 Collapsed=0
 
+[C15_ProjectionsAndCamera_d - About]
+Pos=1,1
+Size=340,60
+Collapsed=0
+
+[A03 - Camera_d - About]
+Pos=1,1
+Size=316,114
+Collapsed=0
+
