--- a/_Binary/imgui.ini
+++ b/_Binary/imgui.ini
@@ -20,7 +20,7 @@ Collapsed=0
 
 [E09 - ARBB_d - About]
 Pos=1,1
-Size=323,254
+Size=316,254
 Collapsed=0
 
 [A04s - SAT - About]
@@ -31,5 +31,10 @@ Collapsed=0
 [A04 - SAT_d - About]
 Pos=1,1
 Size=316,275
+Collapsed=0
+
+[A05 - Octree_d - About]
+Pos=1,1
+Size=316,300
 Collapsed=0
 
