--- a/_Binary/imgui.ini
+++ b/_Binary/imgui.ini
@@ -35,6 +35,11 @@ Collapsed=0
 
 [A05 - Octree_d - About]
 Pos=1,1
-Size=32,32
+Size=316,300
+Collapsed=0
+
+[A05 - Octree - About]
+Pos=1,1
+Size=316,300
 Collapsed=0
 
